--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://172.16.0.30:3306/lera_osapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=livia
+spring.datasource.password=21262812
+spring.jpa.show-sql=True
 
