--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,13 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-validation</artifactId>
                 </dependency>
-	</dependencies>
+		  <dependency>
+		    <groupId>javax</groupId>
+		    <artifactId>javaee-web-api</artifactId>
+		    <version>7.0</version>
+		    <type>jar</type>
+		  </dependency>
+		</dependencies>
 	<build>
 		<plugins>
 			<plugin>
